--- a/templates/1.ConexionBD_Vehiculo/templates/base.html
+++ b/templates/1.ConexionBD_Vehiculo/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>CRUD Vehículos y Matrículas</title>
+    <title>Vehículos y Matrículas</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
 <nav class="navbar navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="/">CRUD</a>
+        <a class="navbar-brand" href="/">Conexión Base de Datos</a>
         <a class="btn btn-outline-light me-2" href="/?m=V">Vehículos</a>
         <a class="btn btn-outline-light" href="/?m=M">Matrículas</a>
     </div>
